--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <module>fixture-data</module>
         <module>fixture-security</module>
         <module>fixture-web</module>
-        <!--<module>fixture-feature</module>-->
+        <module>fixture-feature</module>
     </modules>
 
 </project>
