--- a/fixture-parent/pom.xml
+++ b/fixture-parent/pom.xml
@@ -184,6 +184,7 @@
                     <version>${tomcat7-maven-plugin.version}</version>
                     <executions>
                         <execution>
+                            <id>run</id>
                             <goals>
                                 <goal>run</goal>
                             </goals>
@@ -555,6 +556,11 @@
             </dependency>
             <dependency>
                 <groupId>org.webjars</groupId>
+                <artifactId>fuelux</artifactId>
+                <version>${fuelux.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.webjars</groupId>
                 <artifactId>html5shiv</artifactId>
                 <version>${html5shiv.version}</version>
             </dependency>
@@ -562,6 +568,17 @@
                 <groupId>org.webjars</groupId>
                 <artifactId>jquery</artifactId>
                 <version>${jquery.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.webjars</groupId>
+                <artifactId>x-editable-bootstrap</artifactId>
+                <version>${x-editable-bootstrap.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.webjars</groupId>
+                        <artifactId>bootstrap</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -596,6 +613,7 @@
         <!-- TODO Remove this when cucumber > 1.1.3 -->
         <cucumber-html.version>0.2.3</cucumber-html.version>
         <font-awesome.version>3.1.1-1</font-awesome.version>
+        <fuelux.version>2.3.0</fuelux.version>
         <h2.version>1.3.172</h2.version>
         <hibernate.version>4.2.2.Final</hibernate.version>
         <hibernate-jpa-2.0-api.version>1.0.1.Final</hibernate-jpa-2.0-api.version>
@@ -617,6 +635,7 @@
         <spring-data-jpa.version>1.3.2.RELEASE</spring-data-jpa.version>
         <spring-security.version>3.1.4.RELEASE</spring-security.version>
         <tiles.version>3.0.1</tiles.version>
+        <x-editable-bootstrap.version>1.4.3-1</x-editable-bootstrap.version>
     </properties>
 
 </project>
