--- a/fixture-parent/pom.xml
+++ b/fixture-parent/pom.xml
@@ -255,6 +255,19 @@
                     </configuration>
                 </plugin>
                 <plugin>
+                    <groupId>org.jasig.maven</groupId>
+                    <artifactId>sass-maven-plugin</artifactId>
+                    <version>${sass-maven-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>update-stylesheets</id>
+                            <goals>
+                                <goal>update-stylesheets</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
                     <groupId>org.jetbrains.kotlin</groupId>
                     <artifactId>kotlin-maven-plugin</artifactId>
                     <version>${kotlin-maven-plugin.version}</version>
@@ -603,6 +616,7 @@
         <maven-site-plugin.version>3.2</maven-site-plugin.version>
         <maven-surefire-plugin.version>2.14.1</maven-surefire-plugin.version>
         <maven-war-plugin.version>2.3</maven-war-plugin.version>
+        <sass-maven-plugin.version>1.1.1</sass-maven-plugin.version>
         <tomcat7-maven-plugin.version>2.1</tomcat7-maven-plugin.version>
 
         <!-- Dependency versions -->
@@ -612,14 +626,14 @@
         <cucumber.version>1.1.3</cucumber.version>
         <!-- TODO Remove this when cucumber > 1.1.3 -->
         <cucumber-html.version>0.2.3</cucumber-html.version>
-        <font-awesome.version>3.1.1-1</font-awesome.version>
+        <font-awesome.version>3.2.1</font-awesome.version>
         <fuelux.version>2.3.0</fuelux.version>
         <h2.version>1.3.172</h2.version>
         <hibernate.version>4.2.2.Final</hibernate.version>
         <hibernate-jpa-2.0-api.version>1.0.1.Final</hibernate-jpa-2.0-api.version>
         <html5shiv.version>3.6.2</html5shiv.version>
         <jboss-logging.version>3.1.3.GA</jboss-logging.version>
-        <jquery.version>2.0.0</jquery.version>
+        <jquery.version>2.0.2</jquery.version>
         <jstl.version>1.2</jstl.version>
         <junit.version>4.11</junit.version>
         <kotlin.version>0.5.748</kotlin.version>
