--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -61,7 +61,7 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>/WEB-INF/spring/fixture-web.xml</param-value>
+            <param-value>/WEB-INF/spring/*.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
