--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,22 @@
         <maven>3.0.5</maven>
     </prerequisites>
 
+    <scm>
+        <connection>scm:git:git@github.com:martinlau/fixture.git</connection>
+        <url>scm:git:git@github.com:martinlau/fixture.git</url>
+        <developerConnection>scm:git:git@github.com:martinlau/fixture.git</developerConnection>
+    </scm>
+
+    <developers>
+        <developer>
+            <id>martinlau</id>
+            <email>m@hum.ph</email>
+            <name>Martin Lau</name>
+            <timezone>+10</timezone>
+            <url>http://hum.ph</url>
+        </developer>
+    </developers>
+
     <build>
         <pluginManagement>
             <plugins>
