--- a/pom.xml
+++ b/pom.xml
@@ -725,6 +725,7 @@
                 <version>${wro4j.version}</version>
                 <scope>runtime</scope>
                 <exclusions>
+                    <!-- TODO Update exclusions for resources we don't use (eg less) -->
                     <exclusion>
                         <groupId>commons-logging</groupId>
                         <artifactId>commons-logging</artifactId>
@@ -949,10 +950,14 @@
         <tomcat7-maven-plugin.version>2.1</tomcat7-maven-plugin.version>
 
         <!-- Dependency versions -->
+        <ant.version>1.9.1</ant.version>
+        <antlr-runtime.version>3.5</antlr-runtime.version>
         <aspectj.version>1.7.3</aspectj.version>
         <bootswatch.version>2.3.1</bootswatch.version>
         <c3p0.version>0.9.2.1</c3p0.version>
-        <cglib.version>2.2.2</cglib.version>
+        <cglib.version>3.0</cglib.version>
+        <commons-beanutils.version>1.8.3</commons-beanutils.version>
+        <commons-io.version>2.4</commons-io.version>
         <cucumber.version>1.1.3</cucumber.version>
         <!-- TODO Remove this when cucumber > 1.1.3 -->
         <cucumber-html.version>0.2.3</cucumber-html.version>
@@ -980,11 +985,7 @@
         <spring-data-rest.version>1.0.0.RELEASE</spring-data-rest.version>
         <spring-security.version>3.1.4.RELEASE</spring-security.version>
         <tiles.version>3.0.1</tiles.version>
-        <wro4j.version>1.6.3</wro4j.version>
-        <commons-io.version>2.4</commons-io.version>
-        <commons-beanutils.version>1.8.3</commons-beanutils.version>
-        <ant.version>1.9.1</ant.version>
-        <antlr-runtime.version>3.4</antlr-runtime.version>
+        <wro4j.version>1.7.0</wro4j.version>
     </properties>
 
 </project>
